0031944: Foundation Classes - mutex for message level

(cherry picked from commit 0f07a04a85dedd375a5383f3cb0031c0a6d6b329)