src/Message/Message_Report.cxx
@@ -188,6 +188,8 @@ void Message_Report::UpdateActiveInMessenger (const Handle(Message_Messenger)& t
 //=======================================================================
 void Message_Report::AddLevel (Message_Level* theLevel, const TCollection_AsciiString& theName)
 {
+  Standard_Mutex::Sentry aSentry (myMutex);
+
   myAlertLevels.Append (theLevel);
 
   Handle(Message_AlertExtended) aLevelRootAlert = new Message_AlertExtended();
@@ -221,6 +223,8 @@ void Message_Report::AddLevel (Message_Level* theLevel, const TCollection_AsciiS
 
 void Message_Report::RemoveLevel (Message_Level* theLevel)
 {
+  Standard_Mutex::Sentry aSentry (myMutex);
+
   for (int aLevelIndex = myAlertLevels.Size(); aLevelIndex >= 1; aLevelIndex--)
   {
     Message_Level* aLevel = myAlertLevels.Value (aLevelIndex);
@@ -245,6 +249,8 @@ void Message_Report::Clear()
   if (compositeAlerts().IsNull())
     return;
 
+  Standard_Mutex::Sentry aSentry (myMutex);
+
   compositeAlerts()->Clear();
   myAlertLevels.Clear();
 }
@@ -259,6 +265,8 @@ void Message_Report::Clear (Message_Gravity theGravity)
   if (compositeAlerts().IsNull())
     return;
 
+  Standard_Mutex::Sentry aSentry (myMutex);
+
   compositeAlerts()->Clear (theGravity);
   myAlertLevels.Clear();
 }
@@ -272,6 +280,8 @@ void Message_Report::Clear (const Handle(Standard_Type)& theType)
 {
   if (compositeAlerts().IsNull())
     return;
+
+  Standard_Mutex::Sentry aSentry (myMutex);
 
   compositeAlerts()->Clear (theType);
   myAlertLevels.Clear();
